all server done

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,8 @@
 {
     "cSpell.words": [
-        "meanauth"
+        "meanauth",
+        "meanauthapp",
+        "olalekan",
+        "usman"
     ]
 }
