--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "~10.1.4",
     "@angular/platform-browser-dynamic": "~10.1.4",
     "@angular/router": "~10.1.4",
+    "angular2-flash-messages": "^3.0.1",
     "bootstrap": "^4.5.3",
     "jquery": "1.9.1",
     "popper.js": "^1.16.1",
