--- a/client/angular.json
+++ b/client/angular.json
@@ -13,6 +13,9 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
+            "allowedCommonJsDependencies": [
+              "angular2-flash-messages"
+            ],
             "outputPath": "../public",
             "index": "src/index.html",
             "main": "src/main.ts",
